--- a/Views/Group/Group.cshtml
+++ b/Views/Group/Group.cshtml
@@ -24,6 +24,7 @@
                                         <tr>
                                             <th>Group Id</th>
                                             <th>Group Name</th>
+
                                         </tr>
                                     </thead>
                                     <tbody id="table_body" class="scrollable">
@@ -71,8 +72,13 @@
                                 <label for="groupName">Group Name</label>
                                 <input type="text" class="form-control" id="groupName" name="groupName" placeholder="Enter Group Name">
                             </div>
+                            <div class="form-group">
+                                <label for="groupMembers">Group Members (user IDs separated by commas)</label>
+                                <input type="text" class="form-control" id="groupMembers" name="groupMembers" placeholder="Enter Group Members">
+                            </div>
                         </form>
                     </div>
+
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                         <button type="button" class="btn btn-primary" onclick="CreateGroup()">Create</button>
@@ -89,11 +95,12 @@
     function CreateGroup() {
         var groupId = $('#groupId').val();
         var groupName = $('#groupName').val();
+        var groupMembers = $('#groupMembers').val(); // Get group members input
 
         $.ajax({
             url: '/Group/CreateGroup',
             method: 'post',
-            data: { 'groupId': groupId, 'groupName': groupName },
+            data: { 'groupId': groupId, 'groupName': groupName, 'groupMembers': groupMembers }, // Include group members in the data
             success: function (response) {
                 if (response.success) {
                     alert("Group has been created successfully");
@@ -107,6 +114,7 @@
             }
         });
     }
+
 
 
 </script>
